[package]
name = "industrial-io"
version = "0.3.0"
edition = "2018"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/rust-industrial-io"
license = "MIT"
readme = "README.md"
keywords = ["embedded", "analog", "iio"]
categories = ["embedded", "hardware-support", "os"]
description = """
Industrial I/O (IIO) Wrapper
"""

[dependencies]
thiserror = "1.0"
windows-dll = "0.3.0"

[dev-dependencies]
schedule_recv = "0.1"
clap = "2.33"
chrono = "0.4"
ctrlc = "3.1"
